# arc

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMITS.md  Cargo.toml  Dockerfile  Dockerfile.sidecar  Dockerfile.tee  LICENSE  Makefile  README.md  RELEASE_AUDIT.md  deny.toml  package.json  playwright.config.ts  releases.toml
crates/arc-a2a-adapter/: Cargo.toml
crates/arc-a2a-adapter/src/: discovery.rs  lib.rs  mapping.rs  tests.rs  transport.rs
crates/arc-a2a-adapter/tests/: integration_smoke.rs
crates/arc-a2a-edge/: Cargo.toml
crates/arc-a2a-edge/src/: lib.rs
crates/arc-acp-edge/: Cargo.toml
crates/arc-acp-edge/src/: lib.rs
crates/arc-acp-proxy/: Cargo.toml
crates/arc-acp-proxy/src/: attestation.rs  compliance.rs  config.rs  fs_guard.rs  interceptor.rs  kernel_checker.rs  kernel_signer.rs  lib.rs  permission.rs  proxy.rs  receipt.rs  telemetry.rs  transport.rs
crates/arc-ag-ui-proxy/: Cargo.toml
crates/arc-ag-ui-proxy/src/: event.rs  lib.rs  proxy.rs  receipt.rs
crates/arc-anchor/: Cargo.toml
crates/arc-anchor/src/: automation.rs  bitcoin.rs  bundle.rs  discovery.rs  evm.rs  functions.rs  lib.rs  ops.rs  solana.rs
crates/arc-anchor/tests/: integration_smoke.rs
crates/arc-api-protect/: Cargo.toml
crates/arc-api-protect/src/: error.rs  evaluator.rs  lib.rs  proxy.rs  spec_discovery.rs
crates/arc-appraisal/: Cargo.toml
crates/arc-appraisal/src/: lib.rs
crates/arc-appraisal/tests/: integration_smoke.rs
crates/arc-autonomy/: Cargo.toml
crates/arc-autonomy/src/: lib.rs
crates/arc-autonomy/tests/: integration_smoke.rs
crates/arc-bindings-core/: Cargo.toml
crates/arc-bindings-core/src/: canonical.rs  capability.rs  error.rs  hashing.rs  lib.rs  manifest.rs  receipt.rs  signing.rs
crates/arc-bindings-core/tests/: vector_fixtures.rs
crates/arc-cli/: Cargo.toml  README.md
crates/arc-cli/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/arc-cli/src/: admin.rs  cert.rs  certify.rs  did.rs  enterprise_federation.rs  evidence_export.rs  federation_policy.rs  guard.rs  issuance.rs  main.rs  passport.rs  passport_verifier.rs  policy.rs  remote_mcp.rs  reputation.rs  scaffold.rs  scim_lifecycle.rs  trust_control.rs
crates/arc-cli/tests/: capability_lineage.rs  certify.rs  code_agent_preset.rs  did.rs  evidence_export.rs  federated_issue.rs  federation_policy.rs  init.rs  local_reputation.rs  mcp_auth_server.rs  mcp_serve.rs  mcp_serve_http.rs  passport.rs  passport_trust_tier.rs  policy_web3_evidence.rs  provider_admin.rs  receipt_db.rs  receipt_query.rs  reputation_issuance.rs  scim_lifecycle.rs  trust_cluster.rs  trust_revocation.rs
crates/arc-config/: Cargo.toml
crates/arc-config/src/: interpolation.rs  lib.rs  loader.rs  schema.rs  validation.rs
crates/arc-conformance/: Cargo.toml
crates/arc-conformance/src/: load.rs  model.rs  native_suite.rs  report.rs  runner.rs
crates/arc-conformance/tests/: native_suite.rs  wave1_go_live.rs  wave1_live.rs  wave2_go_live.rs  wave2_tasks_live.rs  wave3_auth_live.rs  wave3_go_live.rs  wave4_go_live.rs  wave4_notifications_live.rs  wave5_go_live.rs  wave5_nested_flows_live.rs
crates/arc-control-plane/: Cargo.toml  README.md
crates/arc-control-plane/src/: attestation.rs  lib.rs
crates/arc-control-plane/tests/: runtime_boundaries.rs  web3_ops_qualification.rs
crates/arc-core/: Cargo.toml  README.md
crates/arc-core-types/: Cargo.toml
crates/arc-core-types/src/: canonical.rs  capability.rs  crypto.rs  error.rs  hashing.rs  lib.rs  manifest.rs  merkle.rs  message.rs  oracle.rs  plan.rs  receipt.rs  runtime_attestation.rs  session.rs
crates/arc-core-types/tests/: capability_constraint_variants.rs  no_std_build.rs  protocol_error_registry.rs  receipt_tenant_id.rs  threat_model_artifacts.rs  wire_protocol_schema.rs
crates/arc-core/benches/: core_primitives.rs
crates/arc-core/src/: appraisal.rs  autonomy.rs  canonical.rs  capability.rs  credit.rs  crypto.rs  error.rs  extension.rs  federation.rs  governance.rs  hashing.rs  identity_network.rs  lib.rs  listing.rs  manifest.rs  market.rs  merkle.rs  message.rs  open_market.rs  receipt.rs  session.rs  standards.rs  underwriting.rs  web3.rs
crates/arc-core/tests/: forward_compat.rs  monetary_types.rs  property_invariants.rs
crates/arc-credentials/: Cargo.toml
crates/arc-credentials/src/: artifact.rs  challenge.rs  cross_issuer.rs  discovery.rs  lib.rs  oid4vci.rs  oid4vp.rs  passport.rs  portable_jwt_vc.rs  portable_reputation.rs  portable_sd_jwt.rs  presentation.rs  tests.rs  trust_tier.rs
crates/arc-credentials/tests/: integration_smoke.rs  trust_tier.rs
crates/arc-credit/: Cargo.toml
crates/arc-credit/src/: lib.rs
crates/arc-credit/tests/: integration_smoke.rs
crates/arc-cross-protocol/: Cargo.toml
crates/arc-cross-protocol/src/: lib.rs
crates/arc-data-guards/: Cargo.toml
crates/arc-data-guards/src/: config.rs  error.rs  lib.rs  result_guard.rs  sql_guard.rs  sql_parser.rs  vector_guard.rs  warehouse_cost_guard.rs
crates/arc-data-guards/tests/: result_guard.rs  (+3 more)
crates/arc-did/: Cargo.toml
crates/arc-envoy-ext-authz/: Cargo.toml  build.rs
crates/arc-external-guards/: Cargo.toml
crates/arc-federation/: Cargo.toml
crates/arc-governance/: Cargo.toml
crates/arc-guard-sdk/: Cargo.toml
crates/arc-guard-sdk-macros/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  owners.toml  target-map.toml  upstream_skips.toml
fuzz/fuzz_targets/: a2a_envelope_decode.rs  acp_envelope_decode.rs  anchor_bundle_verify.rs  attest_verify.rs  canonical_json.rs  capability_receipt.rs  chio_yaml_parse.rs  did_resolve.rs  jwt_vc_verify.rs  manifest_roundtrip.rs  mcp_envelope_decode.rs  merkle_checkpoint.rs  oid4vp_presentation.rs  openapi_ingest.rs  policy_parse_compile.rs  receipt_log_replay.rs  sql_parser.rs  tool_action.rs  wasm_preinstantiate_validate.rs  wit_host_call_boundary.rs
fuzz/mutators/: canonical_json.rs
fuzz/src/: lib.rs
fuzz/tests/: smoke.rs
xtask/: Cargo.toml  codegen-tools.lock.toml
xtask/src/: main.rs
(+7479 files in other folders)
