[workspace]
resolver = "2"
members = [
    # Core & types
    "crates/chio-core",
    "crates/chio-core-types",
    #
    # Kernel variants
    "crates/chio-kernel",
    "crates/chio-kernel-browser",
    "crates/chio-kernel-core",
    "crates/chio-kernel-mobile",
    #
    # Guards & policy
    "crates/chio-data-guards",
    "crates/chio-external-guards",
    "crates/chio-guard-sdk",
    "crates/chio-guard-sdk-macros",
    "crates/chio-guards",
    "crates/chio-policy",
    "crates/chio-wasm-guards",
    #
    # Protocol adapters & edges
    "crates/chio-a2a-adapter",
    "crates/chio-a2a-edge",
    "crates/chio-acp-edge",
    "crates/chio-acp-proxy",
    "crates/chio-ag-ui-proxy",
    "crates/chio-cross-protocol",
    "crates/chio-envoy-ext-authz",
    "crates/chio-mcp-adapter",
    "crates/chio-mcp-edge",
    "crates/chio-openai",
    "crates/chio-openapi",
    "crates/chio-openapi-mcp-bridge",
    "crates/chio-tower",
    #
    # Economics & settlement
    "crates/chio-anchor",
    "crates/chio-appraisal",
    "crates/chio-autonomy",
    "crates/chio-credit",
    "crates/chio-link",
    "crates/chio-listing",
    "crates/chio-market",
    "crates/chio-open-market",
    "crates/chio-settle",
    "crates/chio-underwriting",
    "crates/chio-web3",
    "crates/chio-web3-bindings",
    #
    # Identity, credentials, federation
    "crates/chio-credentials",
    "crates/chio-did",
    "crates/chio-federation",
    "crates/chio-governance",
    "crates/chio-reputation",
    #
    # Observability & ops
    "crates/chio-metering",
    "crates/chio-siem",
    #
    # Control plane & storage
    "crates/chio-config",
    "crates/chio-control-plane",
    "crates/chio-manifest",
    "crates/chio-store-sqlite",
    "crates/chio-workflow",
    #
    # HTTP & session
    "crates/chio-hosted-mcp",
    "crates/chio-http-core",
    "crates/chio-http-session",
    #
    # Products
    "crates/chio-api-protect",
    "crates/chio-cli",
    "crates/chio-mercury",
    "crates/chio-mercury-core",
    "crates/chio-wall",
    "crates/chio-wall-core",
    #
    # SDK support
    "crates/chio-binding-helpers",
    "crates/chio-bindings-ffi",
    "crates/chio-conformance",
    #
    # Examples
    "examples/guards/enriched-inspector",
    "examples/guards/tool-gate",
    "examples/hello-a2a",
    "examples/hello-acp",
    "examples/hello-mcp",
    "examples/hello-tool",
    #
    # Tests
    "formal/diff-tests",
    "tests/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/backbay/chio"

[workspace.metadata.chio]
rust_public_entrypoints = [
    "chio-cli",
    "chio-control-plane",
    "chio-core",
    "chio-guards",
    "chio-hosted-mcp",
    "chio-kernel",
    "chio-manifest",
    "chio-mcp-adapter",
    "chio-mcp-edge",
    "chio-policy",
]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tracing = "0.1"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
ryu = "1"
sha2 = "0.10"
reqwest = { version = "0.13.2", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = "1"
url = "2"
proptest = "1.10"
criterion = "0.5"
tempfile = "3"
