# owned-by: M02 (fuzz lane); current entries layered by M09.P3.T5.
#
# Standalone Cargo workspace so libFuzzer / nightly requirements do not
# leak into the main stable/MSRV workspace lanes. M02's PR #13 layers the
# seven baseline targets enumerated in `fuzz/target-map.toml` on top of
# this file; later tickets layer their target-specific `[[bin]]` entries
# alongside their `fuzz_target!` definitions.
#
# Reference: `.planning/trajectory/02-fuzzing-post-pr13.md`
# (continuous fuzzing path) and
# `.planning/trajectory/09-supply-chain-attestation.md`
# Phase 3 task 5 (this entry: `attest_verify`).

[package]
name = "chio-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

# An empty `[workspace]` stanza marks this crate as the root of its own
# Cargo workspace. Without it, `cargo +nightly fuzz build` would attempt
# to fold the fuzz crate into the parent workspace at `../Cargo.toml`,
# which forbids `unwrap`/`expect` workspace-wide and pins a stable MSRV
# that libFuzzer's nightly-only runtime cannot satisfy.
[workspace]

[dependencies]
chio-a2a-adapter = { path = "../crates/chio-a2a-adapter", features = ["fuzz"] }
chio-anchor = { path = "../crates/chio-anchor", features = ["fuzz"] }
chio-attest-verify = { path = "../crates/chio-attest-verify" }
chio-credentials = { path = "../crates/chio-credentials", features = ["fuzz"] }
chio-did = { path = "../crates/chio-did", features = ["fuzz"] }
chio-mcp-adapter = { path = "../crates/chio-mcp-adapter", features = ["fuzz"] }
chio-mcp-edge = { path = "../crates/chio-mcp-edge", features = ["fuzz"] }
libfuzzer-sys = "0.4"
# `arbitrary` is pulled in directly by libFuzzer harnesses that take
# structured input; the `derive` feature lets per-target structs annotate
# `#[derive(Arbitrary)]` when they need typed views on the byte stream.
arbitrary = { version = "1", features = ["derive"] }

# `unwrap_used`/`expect_used` denied so fuzz targets cannot mask panics
# behind a hidden `.unwrap()`. Targets must use `if let Ok(_) = ...` or
# `match` to consume `Result` values from the trust-boundary surface.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# M02.P1.T3.b: Chio A2A adapter SSE-decode + per-envelope fan-out trust
# boundary (parse_sse_stream + JSON-RPC envelope unwrap + stream-response
# validator).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "a2a_envelope_decode"
path = "fuzz_targets/a2a_envelope_decode.rs"
test = false
doc = false
bench = false

# M02.P1.T2: Chio anchor proof-bundle / checkpoint-publication-records
# trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "anchor_bundle_verify"
path = "fuzz_targets/anchor_bundle_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attest_verify"
path = "fuzz_targets/attest_verify.rs"
test = false
doc = false
bench = false

# M02.P1.T1.c: Chio DID resolve trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "did_resolve"
path = "fuzz_targets/did_resolve.rs"
test = false
doc = false
bench = false

# M02.P1.T1.a: Chio JWT-VC verify trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "jwt_vc_verify"
path = "fuzz_targets/jwt_vc_verify.rs"
test = false
doc = false
bench = false

# M02.P1.T3.a: Chio MCP envelope decode plus evaluator dispatch trust
# boundary (decode-then-evaluator pipeline).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "mcp_envelope_decode"
path = "fuzz_targets/mcp_envelope_decode.rs"
test = false
doc = false
bench = false

# M02.P1.T1.b: Chio OID4VP direct_post.jwt response verify trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "oid4vp_presentation"
path = "fuzz_targets/oid4vp_presentation.rs"
test = false
doc = false
bench = false
