# owned-by: M02 (fuzz lane); current entries layered by M09.P3.T5.
#
# Standalone Cargo workspace so libFuzzer / nightly requirements do not
# leak into the main stable/MSRV workspace lanes. M02's PR #13 layers the
# seven baseline targets enumerated in `fuzz/target-map.toml` on top of
# this file; later tickets layer their target-specific `[[bin]]` entries
# alongside their `fuzz_target!` definitions.
#
# Reference: `.planning/trajectory/02-fuzzing-post-pr13.md`
# (continuous fuzzing path) and
# `.planning/trajectory/09-supply-chain-attestation.md`
# Phase 3 task 5 (this entry: `attest_verify`).

[package]
name = "chio-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

# An empty `[workspace]` stanza marks this crate as the root of its own
# Cargo workspace. Without it, `cargo +nightly fuzz build` would attempt
# to fold the fuzz crate into the parent workspace at `../Cargo.toml`,
# which forbids `unwrap`/`expect` workspace-wide and pins a stable MSRV
# that libFuzzer's nightly-only runtime cannot satisfy.
[workspace]

[dependencies]
chio-a2a-adapter = { path = "../crates/chio-a2a-adapter", features = ["fuzz"] }
chio-acp-edge = { path = "../crates/chio-acp-edge", features = ["fuzz"] }
chio-anchor = { path = "../crates/chio-anchor", features = ["fuzz"] }
chio-attest-verify = { path = "../crates/chio-attest-verify" }
chio-config = { path = "../crates/chio-config", features = ["fuzz"] }
chio-credentials = { path = "../crates/chio-credentials", features = ["fuzz"] }
chio-did = { path = "../crates/chio-did", features = ["fuzz"] }
chio-kernel-core = { path = "../crates/chio-kernel-core", features = ["fuzz"] }
chio-mcp-adapter = { path = "../crates/chio-mcp-adapter", features = ["fuzz"] }
chio-mcp-edge = { path = "../crates/chio-mcp-edge", features = ["fuzz"] }
chio-openapi-mcp-bridge = { path = "../crates/chio-openapi-mcp-bridge", features = ["fuzz"] }
chio-wasm-guards = { path = "../crates/chio-wasm-guards", features = ["fuzz"] }
libfuzzer-sys = "0.4"
# `arbitrary` is pulled in directly by libFuzzer harnesses that take
# structured input; the `derive` feature lets per-target structs annotate
# `#[derive(Arbitrary)]` when they need typed views on the byte stream.
arbitrary = { version = "1", features = ["derive"] }

# `unwrap_used`/`expect_used` denied so fuzz targets cannot mask panics
# behind a hidden `.unwrap()`. Targets must use `if let Ok(_) = ...` or
# `match` to consume `Result` values from the trust-boundary surface.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# M02.P1.T3.b: Chio A2A adapter SSE-decode + per-envelope fan-out trust
# boundary (parse_sse_stream + JSON-RPC envelope unwrap + stream-response
# validator).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "a2a_envelope_decode"
path = "fuzz_targets/a2a_envelope_decode.rs"
test = false
doc = false
bench = false

# M02.P1.T3.c: Chio ACP edge envelope decode plus handle_jsonrpc dispatch
# trust boundary (NDJSON-framed JSON-RPC envelopes -> ChioAcpEdge::handle_jsonrpc).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "acp_envelope_decode"
path = "fuzz_targets/acp_envelope_decode.rs"
test = false
doc = false
bench = false

# M02.P1.T2: Chio anchor proof-bundle / checkpoint-publication-records
# trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "anchor_bundle_verify"
path = "fuzz_targets/anchor_bundle_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attest_verify"
path = "fuzz_targets/attest_verify.rs"
test = false
doc = false
bench = false

# M02.P1.T5.a: Chio chio-config YAML loader trust boundary
# (`loader::load_from_str`: env-var interpolation -> serde_yml deserialize
# with `deny_unknown_fields` -> post-deserialization validation).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1
# (trust-boundary fuzz target #10).
[[bin]]
name = "chio_yaml_parse"
path = "fuzz_targets/chio_yaml_parse.rs"
test = false
doc = false
bench = false

# M02.P1.T1.c: Chio DID resolve trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "did_resolve"
path = "fuzz_targets/did_resolve.rs"
test = false
doc = false
bench = false

# M02.P1.T1.a: Chio JWT-VC verify trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "jwt_vc_verify"
path = "fuzz_targets/jwt_vc_verify.rs"
test = false
doc = false
bench = false

# M02.P1.T3.a: Chio MCP envelope decode plus evaluator dispatch trust
# boundary (decode-then-evaluator pipeline).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "mcp_envelope_decode"
path = "fuzz_targets/mcp_envelope_decode.rs"
test = false
doc = false
bench = false

# M02.P1.T1.b: Chio OID4VP direct_post.jwt response verify trust boundary.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "oid4vp_presentation"
path = "fuzz_targets/oid4vp_presentation.rs"
test = false
doc = false
bench = false

# M02.P1.T5.b: Chio OpenAPI-MCP bridge spec-ingest trust boundary
# (`OpenApiMcpBridge::from_spec`: JSON/YAML auto-detect parse plus
# OpenAPI 3.x version validation plus manifest generation plus
# `validate_manifest`).
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1
# (trust-boundary fuzz target #11).
[[bin]]
name = "openapi_ingest"
path = "fuzz_targets/openapi_ingest.rs"
test = false
doc = false
bench = false

# M02.P1.T8: Chio kernel-core receipt-log replay trust boundary
# (`fuzz_receipt_log_replay`: NDJSON receipt-log decode -> per-receipt
# `ChioReceipt::verify_signature` -> chain-invariant traversal). Round-2
# add per `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1
# lines 379-385: catches reordered / corrupted-chain bugs that
# `merkle_checkpoint` cannot, since the merkle root only commits to leaf
# hashes and not to the canonical-bytes-equal-the-leaf invariant nor to
# cross-receipt timestamp / signer consistency.
[[bin]]
name = "receipt_log_replay"
path = "fuzz_targets/receipt_log_replay.rs"
test = false
doc = false
bench = false

# M02.P1.T4.a: Chio WASM guards preinstantiate-validate trust boundary
# (`ComponentBackend::load_module` plus `WasmtimeBackend::load_module` plus
# `detect_wasm_format`). Hardens the parse / validate pipeline that runs
# BEFORE instantiation against malformed or malicious `.wasm` bytes. M09
# P3's signed-module branch is `cfg(feature = "attest_verify")`-gated and
# exercises the same `load_module` entry point post-signature check; T4.a
# focuses on the unsigned validation path.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "wasm_preinstantiate_validate"
path = "fuzz_targets/wasm_preinstantiate_validate.rs"
test = false
doc = false
bench = false

# M02.P1.T4.b: Chio WASM guards WIT host-call boundary deserialization
# trust boundary. Drives arbitrary bytes through the serde surfaces that
# materialize guest-supplied / guest-emitted payloads into Rust structs:
# `GuardRequest` (host-to-guest WIT request envelope) and
# `GuestDenyResponse` (canonical guest-to-host `chio_deny_reason` payload,
# the actual deser site at runtime.rs `read_structured_deny_reason`).
# `GuardVerdict` is intentionally excluded -- it crosses the WIT boundary
# as an `i32` return code, not a serialized struct.
# Source: `.planning/trajectory/02-fuzzing-post-pr13.md` Phase 1.
[[bin]]
name = "wit_host_call_boundary"
path = "fuzz_targets/wit_host_call_boundary.rs"
test = false
doc = false
bench = false
