# Standalone Cargo workspace so libFuzzer / nightly requirements do not
# leak into the main stable/MSRV workspace lanes.

[package]
name = "chio-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

# Expose the structure-aware canonical-JSON mutator to the
# canonical-JSON-decoding `[[bin]]` targets below via library indirection.
[lib]
name = "chio_fuzz"
path = "src/lib.rs"

# An empty `[workspace]` stanza marks this crate as the root of its own
# Cargo workspace. Without it, `cargo +nightly fuzz build` would attempt
# to fold the fuzz crate into the parent workspace at `../Cargo.toml`,
# which forbids `unwrap`/`expect` workspace-wide and pins a stable MSRV
# that libFuzzer's nightly-only runtime cannot satisfy.
[workspace]

[dependencies]
chio-a2a-adapter = { path = "../crates/chio-a2a-adapter", features = ["fuzz"] }
chio-acp-edge = { path = "../crates/chio-acp-edge", features = ["fuzz"] }
chio-anchor = { path = "../crates/chio-anchor", features = ["fuzz"] }
chio-attest-verify = { path = "../crates/chio-attest-verify" }
chio-config = { path = "../crates/chio-config", features = ["fuzz"] }
chio-core = { path = "../crates/chio-core" }
# No `fuzz` feature on chio-core-types or chio-manifest; both are pure-serde
# Deserialize surfaces, so the fuzz harness drives `serde_json::from_slice`
# directly.
chio-core-types = { path = "../crates/chio-core-types" }
chio-data-guards = { path = "../crates/chio-data-guards" }
chio-guards = { path = "../crates/chio-guards" }
chio-kernel = { path = "../crates/chio-kernel" }
chio-manifest = { path = "../crates/chio-manifest" }
chio-credentials = { path = "../crates/chio-credentials", features = ["fuzz"] }
chio-did = { path = "../crates/chio-did", features = ["fuzz"] }
chio-kernel-core = { path = "../crates/chio-kernel-core", features = ["fuzz"] }
chio-mcp-adapter = { path = "../crates/chio-mcp-adapter", features = ["fuzz"] }
chio-mcp-edge = { path = "../crates/chio-mcp-edge", features = ["fuzz"] }
chio-openapi-mcp-bridge = { path = "../crates/chio-openapi-mcp-bridge", features = ["fuzz"] }
chio-policy = { path = "../crates/chio-policy" }
chio-wasm-guards = { path = "../crates/chio-wasm-guards", features = ["fuzz"] }
libfuzzer-sys = "0.4"
# `derive` feature lets per-target structs use `#[derive(Arbitrary)]`.
arbitrary = { version = "1", features = ["derive"] }
# Pinned to the same 1.x line consumed by chio-core-types / chio-manifest.
serde_json = "1"

# `unwrap_used`/`expect_used` denied so fuzz targets cannot mask panics
# behind a hidden `.unwrap()`. Targets must use `if let Ok(_) = ...` or
# `match` to consume `Result` values from the trust-boundary surface.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[bin]]
name = "a2a_envelope_decode"
path = "fuzz_targets/a2a_envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "acp_envelope_decode"
path = "fuzz_targets/acp_envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "anchor_bundle_verify"
path = "fuzz_targets/anchor_bundle_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attest_verify"
path = "fuzz_targets/attest_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chio_yaml_parse"
path = "fuzz_targets/chio_yaml_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "did_resolve"
path = "fuzz_targets/did_resolve.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jwt_vc_verify"
path = "fuzz_targets/jwt_vc_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mcp_envelope_decode"
path = "fuzz_targets/mcp_envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oid4vp_presentation"
path = "fuzz_targets/oid4vp_presentation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "openapi_ingest"
path = "fuzz_targets/openapi_ingest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt_log_replay"
path = "fuzz_targets/receipt_log_replay.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wasm_preinstantiate_validate"
path = "fuzz_targets/wasm_preinstantiate_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wit_host_call_boundary"
path = "fuzz_targets/wit_host_call_boundary.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonical_json"
path = "fuzz_targets/canonical_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "capability_receipt"
path = "fuzz_targets/capability_receipt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_roundtrip"
path = "fuzz_targets/manifest_roundtrip.rs"
test = false
doc = false
bench = false

# Main-branch fuzz targets preserved while resolving the roadmap merge.
# These keep the existing `fuzz_*` binary names so their seed corpus
# directories under `fuzz/corpus/fuzz_*` continue to line up with
# cargo-fuzz defaults.
[[bin]]
name = "fuzz_policy_parse_compile"
path = "fuzz_targets/policy_parse_compile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/sql_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_merkle_checkpoint"
path = "fuzz_targets/merkle_checkpoint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tool_action"
path = "fuzz_targets/tool_action.rs"
test = false
doc = false
bench = false
