[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sha2 = { workspace = true }
chio-spec-validate = { path = "../crates/chio-spec-validate" }
chio-spec-codegen = { path = "../crates/chio-spec-codegen" }
