[package]
name = "arc-a2a-adapter"
description = "Thin A2A-to-ARC adapter for agent-card discovery and SendMessage mediation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_a2a_adapter"

[dependencies]
base64 = "0.22"
arc-core = { package = "arc-core-types", path = "../arc-core-types" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
arc-manifest = { package = "arc-manifest", path = "../arc-manifest" }
rustls-pemfile = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
ureq = { version = "2.10", features = ["json"] }
webpki-roots = "0.26"

[dev-dependencies]
rcgen = "0.13"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
