[package]
name = "arc-acp-edge"
description = "ACP edge crate that exposes ARC tools as ACP capabilities with BridgeFidelity assessment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_acp_edge"

[features]
default = []
compatibility-surface = []

[dependencies]
arc-core = { package = "arc-core-types", path = "../arc-core-types" }
arc-cross-protocol = { package = "arc-cross-protocol", path = "../arc-cross-protocol" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
arc-manifest = { package = "arc-manifest", path = "../arc-manifest" }
arc-mcp-edge = { package = "arc-mcp-edge", path = "../arc-mcp-edge" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
