[package]
name = "arc-acp-proxy"
description = "ACP security proxy that enforces ARC capability-based access control on ACP agent sessions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_acp_proxy"

[dependencies]
arc-core = { package = "arc-core-types", path = "../arc-core-types" }
arc-cross-protocol = { package = "arc-cross-protocol", path = "../arc-cross-protocol" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
