[package]
name = "arc-ag-ui-proxy"
description = "AG-UI proxy for ARC -- capability-validated interception of agent-to-UI event streams"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_ag_ui_proxy"

[dependencies]
arc-core = { package = "arc-core", path = "../arc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
