[package]
name = "arc-anchor"
description = "Anchoring runtime and proof normalization for ARC checkpoints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_anchor"

[features]
default = ["web3"]
web3 = [
    "dep:alloy-primitives",
    "dep:alloy-sol-types",
    "dep:arc-core",
    "dep:arc-kernel",
    "dep:arc-web3",
    "dep:arc-web3-bindings",
    "dep:base64",
    "dep:hex",
    "dep:opentimestamps",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:thiserror",
]

[dependencies]
arc-core = { package = "arc-core", path = "../arc-core", optional = true }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel", optional = true }
arc-web3 = { package = "arc-web3", path = "../arc-web3", optional = true }
arc-web3-bindings = { package = "arc-web3-bindings", path = "../arc-web3-bindings", default-features = false, features = ["web3"], optional = true }
alloy-primitives = { version = "1.5.7", default-features = false, features = ["std"], optional = true }
alloy-sol-types = { version = "1.5.7", default-features = false, features = ["std"], optional = true }
base64 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
opentimestamps = { version = "0.2.0", optional = true }
reqwest = { workspace = true, features = ["form", "json", "query", "rustls"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
