[package]
name = "arc-api-protect"
description = "Zero-code reverse proxy that protects HTTP APIs with ARC receipts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
arc-core-types = { path = "../arc-core-types" }
arc-http-core = { path = "../arc-http-core" }
arc-kernel = { path = "../arc-kernel" }
arc-openapi = { path = "../arc-openapi" }
arc-store-sqlite = { path = "../arc-store-sqlite" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
tracing = { workspace = true }
url = { workspace = true }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
