[package]
name = "arc-appraisal"
description = "ARC runtime attestation appraisal artifacts and evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_appraisal"

[dependencies]
arc-core-types = { path = "../arc-core-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
