[package]
name = "arc-autonomy"
description = "ARC bounded autonomy pricing, execution, and rollback contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_autonomy"

[dependencies]
arc-core-types = { path = "../arc-core-types" }
arc-market = { path = "../arc-market" }
arc-web3 = { path = "../arc-web3" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
